# chrome_streamer_rust

./: .gitignore  Cargo.toml  readme.md  rebuild.sh
.cargo/: config.toml
chrome_streamer_be/: Cargo.toml  LICENSE_MIT
chrome_streamer_be/src/: lib.rs
chrome_streamer_rdev/: Cargo.toml  build.rs
chrome_streamer_rdev/src/: main.rs
chrome_streamer_rdev/src/chrome_streamer_rdev_macro/rdev_listener/: mod.rs
chrome_streamer_rdev/src/chrome_streamer_rdev_macro/rdev_network_event/: mod.rs
chrome_streamer_rdev_filter/: Cargo.toml  build.rs  readme.md
chrome_streamer_rdev_filter/src/: main.rs
chrome_streamer_rdev_filter/src/chrome_streamer_rdev_filter/kafka_actions_consumer/: mod.rs
chrome_streamer_rdev_filter/src/chrome_streamer_rdev_filter/video_filter/: mod.rs
chrome_streamer_rdev_filter/test_resources/: input.webm
chrome_streamer_rdev_library/: Cargo.toml
chrome_streamer_rdev_library/src/: lib.rs
codegen_resources/: knockoff_factories.toml
resources/: kafka.toml
