[package]
name = "chrome_streamer_rdev_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { version = "0.5.3" , features = ["serde", "serialize"]}
paste = "1.0.12"
serde = "1.0.137"
serde_json = "1.0.108"
kafka-data-subscriber = { path = "../../kafka-data-subscriber" }
enum-fields = "0.1.0"
tokio = {version = "1.28.0", features = ["full"] }
rdkafka = "0.34.0"
log = "0.4.20"
lazy_static = "1.4.0"
knockoff_tokio_util = {path= "../../rust-spring-knockoff/knockoff_tokio_util"}
futures = "0.3.29"
